# Stereo_camera_inertial_navigation_robot

./: README.md  基于ORB_SLAM2建图
2Dmap/: zoulang_car_rtime_2D_map_sp8.yaml  zoulang_car_rtime_octomap_sp8.bt
sh/: ip.sh  robotengine.sh  telep.sh  zhishanrobot_start.sh
src/ORB_SLAM2/: CMakeLists.txt  FrameTrajectory_KITTI_Format.txt  FrameTrajectory_TUM_Format.txt  KeyFrameTrajectory_TUM_Format.txt  orb_kitti_launch.sh  orb_myneye_stereo_husac.sh
src/ORB_SLAM2/Examples/ROS/ORB_SLAM2/: CMakeLists.txt
src/ORB_SLAM2/Examples/ROS/ORB_SLAM2/src/: ros_stereo.cc
src/ORB_SLAM2/config/: mynteye_d_stereo.yaml
src/kitti_publisher/scripts/: publisher.py
src/pcdtodtpublic/: CMakeLists.txt  package.xml
src/pcdtodtpublic/launch/: pcd_to_octomap_server_bak.launch  pcdconvert_tooctomap.launch
src/pcdtodtpublic/src/: pcdto_octomap_pub.cpp
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/2Dmap/: 524_2D_map.pgm  524_2D_map.yaml  524_2D_map_sp8.pgm  524_2D_map_sp8.yaml  524_2D_map_sp8_car_rtime.pgm  524_2D_map_sp8_car_rtime.yaml  zoulang_car_rtime_2D_map_sp8.pgm  zoulang_car_rtime_2D_map_sp8.yaml
src/robot_navigation/3Dmap/: 524_car_rtime_octomap_sp8.bt
src/robot_navigation/launch/: Trajectory_Tracking.launch  map_server.launch  vslam_location.launch
src/robot_navigation/src/common/: common.h  map_image.cpp  map_image.h  modbus.cpp  modbus.h  paras.cpp  paras.h  use_display.h
src/robot_navigation/src/main_node/: TrackingPthread.cpp  TrackingPthread.h  main_Tracking.cpp  main_map_server.cpp  main_navigation.cpp  nav.cpp  nav.h
src/robot_navigation/src/map/: map.h  map_deal.cpp  map_deal.h  map_process.cpp  map_process.h  mapreadandwrite.cpp  mapreadandwrite.h  probability_values.h
src/robot_navigation/src/route_plan_algorithm/: A_star.cpp  A_star.h
src/ros_joy/: CMakeLists.txt  package.xml
src/ros_joy/launch/: teleop_joy.launch
src/ros_joy/src/: teleop_joy.cpp
src/surfel_fusion/: rviz_config.rviz
src/surfel_fusion/launch/: kitti_orb.launch  myneye_orb_hustac.launch  surfel_map.rviz
src/surfel_fusion/src/: elements.h  fusion_functions.h  ros_node.cpp  surfel_map.cpp  surfel_map.h
src/surfel_fusion_vins/: CMakeLists.txt  package.xml
src/surfel_fusion_vins/launch/: fuse_depthnet.launch
src/surfel_fusion_vins/src/: ros_node.cpp
